# https://packaging.python.org/en/latest/specifications/pyproject-toml/
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# https://peps.python.org/pep-0621/
[project]
name = "subliminal"
description = "Subtitles, faster than your thoughts"
requires-python = ">=3.9"
readme = "README.rst"
license = { text = "MIT" }
authors = [{ name = "Antoine Bertin", email = "diaoulael@gmail.com" }]
maintainers = [
    { name = "Antoine Bertin", email = "diaoulael@gmail.com" },
    { name = "getzze", email = "getzze@gmail.com" },
    { name = "Patrycja Rosa", email = "pypi@ptrcnull.me" },
]
keywords = ["subtitle", "subtitles", "video", "movie", "episode", "tv", "show", "series"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video",
]
dynamic = ["version"]
dependencies = [
    "babelfish>=0.6.1",
    "beautifulsoup4>=4.4.0",
    "defusedxml>=0.7.1",
    "chardet>=5.0",
    "click>=8.0",
    "click-option-group>=0.5.6",
    "dogpile.cache>=1.0",
    "guessit>=3.0.0",
    "knowit>=0.5.5",
    "platformdirs>=3",
    "pysubs2>=1.7",
    "requests>=2.0",
    "srt>=3.5",
    "stevedore>=3.0",
    "tomli>=2",
]

# extras
# https://peps.python.org/pep-0621/#dependencies-optional-dependencies
[project.optional-dependencies]
rar = ["rarfile>=2.7"]
docs = [
    "sphinx<8.2",
    "sphinx_rtd_theme>=2",
    "sphinxcontrib-programoutput",
    "sphinx_autodoc_typehints",
    "vcrpy>=5",  # keep synchronized with tests dependencies
    "towncrier",
]
tests = [
    "subliminal[rar]",
    "coverage[toml]>=7",
    "pytest>=6.0",
    "pytest-cov",
    "pytest-xdist",
    "sympy",
    "colorama",  # used in scripts/
    "vcrpy>=5",  # keep synchronized with docs dependencies
    "win32-setctime",
    "importlib_metadata>=4.6; python_version<'3.10'",
]
types = [
    "mypy",
    "types-requests",
    "types-beautifulsoup4",
    "types-decorator",
]
dev = [
    "pre-commit>=2.9.3",
    "tox",
]

[project.urls]
homepage = "https://github.com/Diaoul/subliminal"
repository = "https://github.com/Diaoul/subliminal"
documentation = "https://subliminal.readthedocs.org"

[project.scripts]
subliminal = "subliminal.cli:cli"

[project.entry-points."subliminal.providers"]
addic7ed = "subliminal.providers.addic7ed:Addic7edProvider"
bsplayer = "subliminal.providers.bsplayer:BSPlayerProvider"
gestdown = "subliminal.providers.gestdown:GestdownProvider"
napiprojekt = "subliminal.providers.napiprojekt:NapiProjektProvider"
opensubtitles = "subliminal.providers.opensubtitles:OpenSubtitlesProvider"
opensubtitlesvip = "subliminal.providers.opensubtitles:OpenSubtitlesVipProvider"
opensubtitlescom = "subliminal.providers.opensubtitlescom:OpenSubtitlesComProvider"
opensubtitlescomvip = "subliminal.providers.opensubtitlescom:OpenSubtitlesComVipProvider"
podnapisi = "subliminal.providers.podnapisi:PodnapisiProvider"
subtitulamos = "subliminal.providers.subtitulamos:SubtitulamosProvider"
tvsubtitles = "subliminal.providers.tvsubtitles:TVsubtitlesProvider"

[project.entry-points."subliminal.refiners"]
hash = "subliminal.refiners.hash:refine"
metadata = "subliminal.refiners.metadata:refine"
omdb = "subliminal.refiners.omdb:refine"
tmdb = "subliminal.refiners.tmdb:refine"
tvdb = "subliminal.refiners.tvdb:refine"

[project.entry-points."babelfish.language_converters"]
addic7ed = "subliminal.converters.addic7ed:Addic7edConverter"
opensubtitles = "subliminal.converters.opensubtitles:OpenSubtitlesConverter"
opensubtitlescom = "subliminal.converters.opensubtitlescom:OpenSubtitlesComConverter"
subtitulamos = "subliminal.converters.subtitulamos:SubtitulamosConverter"
tvsubtitles = "subliminal.converters.tvsubtitles:TVsubtitlesConverter"


[tool.hatch.version]
source = "vcs"


# https://docs.pytest.org/en/6.2.x/customize.html
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--import-mode=importlib --doctest-modules --doctest-glob='*.rst' --doctest-glob='*.md'"
markers = [
    "integration",
    "converter",
    "core",
]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]


# https://coverage.readthedocs.io/en/latest/config.html
[tool.coverage.report]
exclude_also = [
    "pragma: no.cover",
    "if TYPE_CHECKING:",
    "@overload",
    "except ImportError",
    "except PackageNotFoundError",
    "\\.\\.\\.^",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = true
fail_under = 80
omit = [
    "src/subliminal/__main__.py",
]

[tool.coverage.paths]
source = [
    "src/subliminal",
    "**/site-packages/subliminal",
]

[tool.coverage.run]
source = ["src"]
branch = true
relative_files = true
disable_warnings = ["module-not-measured"]


# https://docs.astral.sh/ruff/
[tool.ruff]
line-length = 120
src = ["src", "tests", "scripts"]
exclude = [
    "_version.py",
]

[tool.ruff.lint]
pydocstyle = { convention = "pep257" }
select = [
    "E",      # style errors
    "F",      # flakes
    "W",      # warnings
    "D",      # pydocstyle
    "D417",   # Missing argument descriptions in Docstrings
    "I",      # isort
    "UP",     # pyupgrade
    "S",      # bandit
    "C4",     # flake8-comprehensions
    "B",      # flake8-bugbear
    "TCH",    # flake8-typecheck
    "TID",    # flake8-tidy-imports
    "RUF",    # ruff-specific rules
    "T",      # flake8-print
    "ISC",    # flake8-implicit-str-concat
    "PT",     # flake8-pytest-style
    "FA",     # flake8-future-annotations
    "BLE",    # flake8-blind-except
    "RET",    # flake8-return
    "SIM",    # flake8-simplify
    "DTZ",    # flake8-datetimez
    "A",      # flake8-builtins
    "FBT",    # flake8-boolean-trap
    "ANN0",   # flake8-annotations
    "ANN2",
    "ASYNC",  # flake8-async
    "TRY",    # tryceratops
]
ignore = [
    "D105",   # Missing docstring in magic method
    "D107",   # Missing docstring in `__init__`
    "D401",   # First line should be in imperative mood
]
unfixable = [
    "T201",
]

[tool.ruff.lint.per-file-ignores]
"docs/conf*.py" = ["A001", "D"]
"src/subliminal/__init__.py" = ["E402"]
"tests/*.py" = ["D", "S", "RUF012", "FBT"]
"scripts/*.py" = ["T201"]

# https://docs.astral.sh/ruff/formatter/
[tool.ruff.format]
docstring-code-format = true
quote-style = "single"


# https://towncrier.readthedocs.io/en/stable/tutorial.html
[tool.towncrier]
name = "subliminal"
package = "subliminal"
directory = "changelog.d"
filename = "HISTORY.rst"
title_format = "`v{version} <https://github.com/Diaoul/subliminal/tree/{version}>`_ ({project_date})"
issue_format = "`#{issue} <https://github.com/Diaoul/subliminal/issues/{issue}>`__"
underlines = ["^", "-", "~"]

[[tool.towncrier.type]]
directory = "breaking"
name = "Backwards-incompatible Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "change"
name = "Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "provider"
name = "Provider Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "refiner"
name = "Refiner Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "cli"
name = "CLI Changes"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecation"
name = "Deprecations"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = false

[[tool.towncrier.type]]
directory = "misc"
name = "Misc"
showcontent = false


# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
files = "src/**/*.py"
exclude = ['build', 'dist', 'docs']
# global-only flags
pretty = true
show_error_codes = true
namespace_packages = false
warn_redundant_casts = true
# global per-module flags
check_untyped_defs = true
strict_equality = true
disallow_any_generics = false
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = ["subliminal.*"]
warn_return_any = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
extra_checks = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_return_any = false
disable_error_code = ["var-annotated"]


# https://github.com/PyCQA/doc8
[tool.doc8]
allow-long-titles = true
max-line-length = 120

# https://github.com/crate-ci/typos/blob/master/docs/reference.md
[tool.typos.files]
extend-exclude = ["cassettes/", "tests/"]

[tool.typos.default]
extend-ignore-re = [
    "(?Rm)^.*#\\s*spellchecker:\\s*disable-line$",
    "#\\s*spellchecker:off\\s*\\n.*\\n\\s*#\\s*spellchecker:on"
]

[tool.typos.default.extend-words]
fo = "fo"

[tool.typos.default.extend-identifiers]
tha = "tha"
bre = "bre"
